--- a/source/_posts/常用代码指令.md
+++ b/source/_posts/常用代码指令.md
@@ -13,8 +13,10 @@ summary: 一些不用会忘，但以后可能还会用到的指令、代码
 tags: 常用代码指令
 categories: 代码指令
 ---
+
 # 常用代码指令
-## 前言
+
+ ## 前言
 
 在此页记录一些不用会忘，但以后可能还会用到的指令、代码。有些东西就是用时就要大量用到，就要去找、去查，但不用的话很快就会遗忘，然后遇到同样的问题，又要去找、去查……
 
@@ -29,6 +31,8 @@ categories: 代码指令
 大概会持续更新。
 
 ## 正则表达式
+
+### 字符的查找与替换
 
 比如这样一段文字：
 
@@ -57,83 +61,49 @@ categories: 代码指令
 > 夫是以侯王自謂孤 寡 不榖 此其賤之爲本欤 非也
 >
 > 故致數與無與 是故不欲祿祿若玉 硌硌若石
->
-> 第三章 聞道
->
->
-> 上士聞道 堇能行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
->
-> 是以建言有之曰 明道如費 進道如退 夷道如類 上德如浴 大白如辱 廣德如不足 建德如輸 質真如渝 大方無隅 大器免成 大音希聲 天象無刑 道隱無名
->
-> 夫唯道 善始且善成
->
-> 第四章 反復
+
+
+
+
+我们想要找出其中的章节行。这时就可以使用正则表达式匹配查找：`第.*?章.*`
+
+`.`是单个字符；`.*`是字符串(`?`后面会讲到)。连起来的大概意思就是：查找形如`第XX章XXX`的字段。
+
+><font style="background-color:hsla(200,80%,80%,1);>color:rgba(255,150,150,1);">第一章 論德</font>
 >
 >
-> 反也者 道之動也 弱也者 道之用也
+>上德不德 是以有德 下德不失德 是以無德
 >
-> 天下之物生於有 有生於無
-
-我们想要找出其中的章节行。这时就可以使用正则表达式匹配查找：`^第.*章.*`
-
-`^`是开始；`.`是单个字符；`*`是字符串。连起来的大概意思就是以"第"字开始，查找形如`第XX章XXX`的字段。
-
----
-<div>
-<div style="background-color:rgba(255, 230, 0, 0.5);width:6em;">第一章 論德</div>
-
-
-上德不德 是以有德 下德不失德 是以無德
-
-上德無爲 而無以爲也 上仁爲之 而無以爲也 上義爲之 而有以爲也 上禮爲之 而莫之應也 則攘臂而乃之
-
-故失道而後德 失德而後仁 失仁而後義 失義而後禮 夫禮者 忠信之泊也 而亂之首也
-
-前識者 道之華也 而愚之首也
-
-是以大丈夫居其厚 而不居其泊 居其實 而不居其華 故去皮取此
-
-<div style="background-color:rgba(255, 230, 0, 0.5);width:6em;">第二章 得一</div>
-
-
-昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以爲天下正
-
-其至之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已靈將恐歇 謂浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶
-
-故必貴而以賤爲本 必高矣而以下爲基
-
-夫是以侯王自謂孤 寡 不榖 此其賤之爲本欤 非也
-
-故致數與無與 是故不欲祿祿若玉 硌硌若石
-
-<div style="background-color:rgba(255, 230, 0, 0.5);width:6em;">第三章 聞道</div>
-
-
-上士聞道 堇能行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
-
-是以建言有之曰 明道如費 進道如退 夷道如類 上德如浴 大白如辱 廣德如不足 建德如輸 質真如渝 大方無隅 大器免成 大音希聲 天象無刑 道隱無名
-
-夫唯道 善始且善成
-
-<div style="background-color:rgba(255, 230, 0, 0.5);width:6em;">第四章 反復</div>
-
-
-反也者 道之動也 弱也者 道之用也
-
-天下之物生於有 有生於無
-</div>
-
----
+>上德無爲 而無以爲也 上仁爲之 而無以爲也 上義爲之 而有以爲也 上>禮爲之 而莫之應也 則攘臂而乃之
+>
+>故失道而後德 失德而後仁 失仁而後義 失義而後禮 夫禮者 忠信之泊>也 而亂之首也
+>
+>前識者 道之華也 而愚之首也
+>
+>是以大丈夫居其厚 而不居其泊 居其實 而不居其華 故去皮取此
+>
+><font style="background-color:hsla(200,80%,80%,1);>color:rgba(255,150,150,1);">第二章 得一</font>
+>
+>
+>昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一>以爲天下正
+>
+>其至之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已靈將恐歇 謂>浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶
+>
+>故必貴而以賤爲本 必高矣而以下爲基
+>
+>夫是以侯王自謂孤 寡 不榖 此其賤之爲本欤 非也
+>
+>故致數與無與 是故不欲祿祿若玉 硌硌若石
 
 **<font size=4>文本高亮代表查找成功，被选中。接下来是替换命令：</font>**
 
-查找`(^第.*章.*)`
+查找`(第.*?章.*)`
 
 （注意这里用`()`括了起来，是表引用）
 
 替换`<h3>$1</h3>`
 
-（这里的引用符是`$1`，因为只有1段被`()`括起了的内容；增加了 \<h3> 标签）
+（这里的引用符是`$1`，因为只有1段被`()`括起了的内容〔如果有第二段被`()`引用的内容，那它便是`$2`，它们是`$1`与`$2`。这个后面也会讲到〕；增加了 \<h3> 标签）
 
 ```html
 <h3>第一章 論德</h3>
@@ -162,15 +132,6 @@ categories: 代码指令
 
 故致數與無與 是故不欲祿祿若玉 硌硌若石
 
-<h3>第三章 聞道</h3>
-
-
-上士聞道 堇能行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
-
-是以建言有之曰 明道如費 進道如退 夷道如類 上德如浴 大白如辱 廣德如不足 建德如輸 質真如渝 大方無隅 大器免成 大音希聲 天象無刑 道隱無名
-
-夫唯道 善始且善成
-
 <h3>第四章 反復</h3>
 
 
@@ -178,7 +139,7 @@ categories: 代码指令
 
 天下之物生於有 有生於無
 ```
-<font size=5>***第一章 論德***</font>
+<font size=5>**第一章 論德**</font>
 
 
 上德不德 是以有德 下德不失德 是以無德
@@ -191,7 +152,7 @@ categories: 代码指令
 
 是以大丈夫居其厚 而不居其泊 居其實 而不居其華 故去皮取此
 
-<font size=5>***第二章 得一***</font>
+<font size=5>**第二章 得一**</font>
 
 
 昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以爲天下正
@@ -204,23 +165,84 @@ categories: 代码指令
 
 故致數與無與 是故不欲祿祿若玉 硌硌若石
 
-<font size=5>***第三章 聞道***</font>
+<br>
 
+### 贪婪匹配
 
-上士聞道 堇能行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
+*“`*`与`+`是贪婪的，因为它们会尽可能多地匹配文字。”*
 
-是以建言有之曰 明道如費 進道如退 夷道如類 上德如浴 大白如辱 廣德如不足 建德如輸 質真如渝 大方無隅 大器免成 大音希聲 天象無刑 道隱無名
+举两个例子：
 
-夫唯道 善始且善成
+1.
+   
+>第一千章 不更了，再更傻逼！
+>第一千零一章 加更一章
 
-<font size=5>***第四章 反復***</font>
+查找：`第.*章`
 
+><font style="background-color:hsla(200,80%,80%,1);">第一千章</font> 不更了，再更傻逼！
+><font style="background-color:hsla(200,80%,80%,1);">第一千零一章 加更一章</font>
 
-反也者 道之動也 弱也者 道之用也
+2.
 
-天下之物生於有 有生於無
+<!-- html转义…… -->
+>&lt;font style=&quot;background-color:red;color:green;&quot;&gt;Test&lt;/font&gt;
+
+查找：`<font.*>`
+
+<!-- html转义…… -->
+><font style="background-color:hsla(200,80%,80%,1);">&lt;font style=&quot;background-color:red;color:green;&quot;&gt;Test&lt;/font&gt;</font>
+
+**_返回的结果从逻辑上来讲没有任何问题，但跟我们想的好像不太一样……这时我们需要在`*`后加上限定符`?`，意为非贪婪，即最小匹配_**
+
+查找：`第.*?章`
+
+><font style="background-color:hsla(200,80%,80%,1);">第一千章</font> 不更了，再更傻逼！
+><font style="background-color:hsla(200,80%,80%,1);">第一千零一章</font> 加更一章
+
+<br>
+
+查找：`<font.*?>`
+<!-- html转义 -->
+><font style="background-color:hsla(200,80%,80%,1);">&lt;font style=&quot;background-color:red;color:green;&quot;&gt;</font>Test&lt;/font&gt;
+
+*解决*！
+
+### 不同字段的位置替换
+
+前面说过，`$`不只可以有一个，而是可以有多个，`$1` `$2` `$3`……下面是一些简单的应用：
+
+>有谁知，鬓虽残，心未死！
+>——《夜游宫·记梦寄师伯浑》陆游
+>
+>一杯且买明朝事，送了斜阳月又生。
+>——《鹧鸪天·嫩绿重重看得成》范成大
+>
+>悠然心会，妙处难与君说。
+>——《念奴娇·过洞庭》张孝祥
+
+比如上面的一段文字，我们想要把作者名放到书名号前，正则表达式就可以这样写：
+
+1. 查找：`《.*》.*` 
+   1. 查找：`(《.*》)(.*)` 
+2. 替换：`$2$1`
+
+`(《.*》)`是`$1`，`(.*)`是`$2`。`$2$1`的意思是将`$1`与`$2`的位置对换，即：`(.*)(《.*》)`。
+
+执行的结果为：
+
+>有谁知，鬓虽残，心未死！
+>——陆游《夜游宫·记梦寄师伯浑》
+>
+>一杯且买明朝事，送了斜阳月又生。
+>——范成大《鹧鸪天·嫩绿重重看得成》
+>
+>悠然心会，妙处难与君说。
+>——张孝祥《念奴娇·过洞庭》
 
 ## Hexo
+
+### Hexo的基本操作
 
 **Hexo 的基本操作有4步：**
 
@@ -241,7 +263,7 @@ hexo clean && hexo generate && hexo server
 
 <br>
 
-**基于 gulp 插件的压缩优化：**
+### 基于 gulp 插件的压缩优化
 
 ```bash
 hexo clean && hexo generate && gulp && hexo generate
@@ -251,7 +273,8 @@ hexo clean && hexo generate && gulp && hexo generate
 
 ## Git
 
-**基本操作：**
+### Git的基本操作
+
 
 ```bash
 git init	# 初始化（创建本地库）
@@ -263,6 +286,8 @@ git push -u origin main	# 推送；无第4步，本地是 master 就把 main 换
 ```
 
 `git add .`可以添加当前目录下的所有文件。
+
+### 远程源相关操作
 
 **当我们想更换远程源推送时，我们可能会想到使用`添加远程源`命令：**
 
