--- a/source/_posts/常用软件操作.md
+++ b/source/_posts/常用软件操作.md
@@ -22,7 +22,7 @@ categories:
 
 ## PhotoShop
 
-### **内容识别去水印**
+### 内容识别去水印
 
 1. 打开图片，选区工具选中（矩形、套索、钢笔）。
 2. 菜单栏：`选择` `色彩范围` ，调整颜色容差 ，利用吸管工具，尽可能地调整至黑白两色对比明显，水印清晰浮现为止。目的是为了创造一个选区，更精准地选中水印。完成后`确定`。
@@ -65,7 +65,7 @@ categories:
 
 <font size=2>_代码页留空多行不会有额外的效果，如有需要，可使用换行符`<br>`_</font>
 
-### **强调**
+### 强调
 
 >\*\***加粗**\**
 >**\_\_加粗\_\_**
@@ -83,7 +83,7 @@ categories:
 ~~“所见即所得”~~    ✗
 “实时预览”  ✓
 
-### **列表**
+### 列表
 
 输入`1.`按空格自动生成列表，输入内容后敲回车自动生成序号`2.`。可以按`TAB`缩进生成子列表，如：
 
@@ -92,7 +92,7 @@ categories:
 >        1. 第二行1
 >        2. 第二行2
 
-### **插入图片**
+### 插入图片
 
 ![我是图片下方的注释](/medias/logo.png "我是鼠标移动到图片上方时所显示的内容")
 
@@ -113,7 +113,7 @@ categories:
 ![兔子](https://hddesktopwallpapers.in/wp-content/uploads/2015/08/little-bunny-sweet-picture.jpg "Bunny")
 
 
-### **表格**
+### 表格
 ```markdown
 | 表头1  | 表头2  |  表头3 |
 | ------ | :----: | -----: |
@@ -130,7 +130,7 @@ categories:
 
 <br>
 
-### **为文字添加链接**
+### 为文字添加链接
 
 1. 选中欲添加链接的文字
 <div style="background-color:hsl(190,100%,40%,0.4);width:2.6em;color:hsl(255,100%,100%)">bilibili</div>
@@ -142,7 +142,7 @@ categories:
 
 [bilibili](https://www.bilibili.com/)
 
-### **代码块**
+### 代码块
 
 >\```python
 >msg = "Hello world"
