--- a/source/_posts/常用代码指令.md
+++ b/source/_posts/常用代码指令.md
@@ -271,6 +271,27 @@ hexo clean && hexo generate && gulp && hexo generate
 
 多了一步`压缩再生成`的步骤。完成后使用`hexo deploy`部署。
 
+### 更新Hexo与插件
+
+```bash
+npm update
+cnpm update
+```
+用国内镜像源的可使用`cnmp update`命令
+
+### 查看已安装插件列表
+
+```bash
+npm list
+cnpm list
+```
+卸载命令
+
+```bash
+npm uninstall hexo-qiniu-sync@1.4.7
+cnpm uninstall hexo-qiniu-sync@1.4.7
+```
+
 ## Git
 
 ### Git的基本操作
