--- a/source/_posts/道德经.md
+++ b/source/_posts/道德经.md
@@ -6,12 +6,12 @@ toc: true
 mathjax: false
 date: 2022-08-02 00:40:34
 author:
-img: https://s2.loli.net/2022/08/08/7JmRXqp6UPOV2tI.jpg
+img: 
 coverImg: 
 password:
 summary: 上德不德 是以有德 下德不失德 是以無德
 tags: 道德经
-categories: 摘录
+categories: 文摘
 ---
 
 # 老子-道德经
